Fix broken link in users/show, fix structure and elegibility

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -169,7 +169,7 @@ table {
   color: #B2C248;
 }
 
-#sabrapic {
+#founder_pic {
   float:left;
   height:170px;
   width:150px;
